@@ -38,6 +38,10 @@ INSP.NAME.section.multiline.string.args.message=Multiline string argument in ''{
 INSP.NAME.section.multiple.args=Only one argument is allowed for this section.
 INSP.NAME.section.multiple.args.message=Only one argument is allowed for ''{0}'' section.
 
+# SmkSectionMistypedArgsInspection
+INSP.NAME.section.unspecified.field.args=Field is not specified
+INSP.NAME.section.unspecified.field.args.message=No field from ''{0}'' is specified
+
 # SmkSectionDuplicatedArgsInspection
 INSP.NAME.section.duplicated.args=Duplicated argument
 INSP.NAME.section.duplicated.args.message=This argument has been already added to ''{0}'' section.
