@@ -12,6 +12,7 @@ Features:
 - Inspection: Comma in the end of section arg list isn't needed (see #255)
 - Inspection: Warn user if rule from 'rulesorder' isn't available in current or included files (see #254)
 - Inspection: Warn about string arguments split on several lines (see #259)
+- Inspection: Warn about usage rule/checkpoint/subworkflow object as argument instead of one of its fields (see #257)
 
 Fixed:
 - Completion does not suggest top-level keywords in comments (see #178)
